[package]
name = "game-loader"
version = "0.1.0"
authors = ["iagox86 <ron-git@skullsecurity.org>"]
edition = "2018"

[dependencies]
# Async i/o
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

# Commandline
clap = '2.33.0'

# These create smaller binaries
[profile.release]
panic = 'abort'
lto = true
